# remote-support-platform

./: .editorconfig  .gitattributes  .gitignore  DOCUMENT_INDEX.md  Directory.Build.props  Directory.Packages.props  FINAL_AUDIT_REPORT.md  IMPLEMENTATION_READINESS.md  MANIFEST.json  README.md  RemoteSupport.sln  START_HERE.md  build.ps1  global.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
00-product/: commercialization-and-compliance.md  data-processing-agreement.md  functional-requirements.md  nonfunctional-requirements.md  privacy-notice.md  product-scope.md  risk-register.md  terms-of-service.md  user-flows.md
01-architecture/: data-architecture.md  media-pipeline.md  networking-and-turn.md  runtime-sequences.md  system-architecture.md  windows-process-model.md
01-architecture/adr/: 0001-modular-monolith.md  0002-native-media-core.md  0003-webrtc-transport.md  0004-attended-default.md  0005-no-content-storage.md  0006-signed-update-chain.md  0007-attended-session-aggregate.md  0008-internet-signaling-and-turn.md  0009-peer-data-and-attended-packaging.md
02-protocol/: api-flow-contract.md  canonicalization-and-signatures.md  control-channel.md  error-model.md  file-transfer-protocol.md  managed-host-command-channel.md  session-state-machine.md  signaling-protocol.md
02-protocol/ipc/: service_ipc.proto
02-protocol/native/: remote_support_native.h
02-protocol/openapi/: openapi.yaml
02-protocol/schemas/: appsettings.schema.json  audit-event.schema.json  client-config.schema.json  update-manifest.schema.json
03-client/: accessibility-localization.md  admin-portal.md  capture-encoder-implementation.md  client-solution-structure.md  elevation-broker.md  input-clipboard.md  installer-updater.md  local-data-and-logs.md  media-kernel-contract.md  native-bridge-contract.md  native-webrtc-build.md  operator-console.md  portable-agent.md  transport-metrics.md  webrtc-integration.md  windows-service.md
04-backend/: authorization-matrix.md  backend-structure.md  capacity-and-cost.md  database-schema.sql  deployment-topology.md  domain-model.md  migration-policy.md  policy-engine.md  signaling-service.md  turn-service.md
05-security/: abuse-prevention.md  audit-and-incident.md  identity-and-access.md  key-management.md  secure-sdlc.md  security-architecture.md  threat-model.md  unattended-threat-model.md
06-quality/: av-edr-false-positive-process.md  compatibility-matrix.md  goal-08-file-safety-report.md  goal-09-accessibility-localization-report.md  observability.md  penetration-test-scope-and-closure.md  performance-and-slo.md  release-gates.md  supported-capability-matrix.md  test-strategy.md
07-delivery/: acceptance-test-cases.csv  acceptance-test-catalog.md  beta-program.md  bootstrap-and-build.md  ci-cd.md  coding-standards.md  implementation-order.md  product-backlog.md  release-gate-approval.md  repository-structure.md
07-delivery/evidence/: goal-04.md  goal-05.md  goal-06.md  goal-07.md  goal-08.md  goal-09.md  goal-10.md  goal-11-drill.json  goal-11.md  goal-12.md  goal-13.md  goal-14.md
07-delivery/goals/: goal-01-foundation.md  goal-02-capture-render.md  goal-03-encoding.md  goal-04-lan-transport.md  goal-05-input-topology.md  goal-06-control-plane-consent.md  goal-07-internet-turn.md  goal-08-data-features.md  goal-09-attended-packaging.md  goal-10-tenancy-policy-audit.md  goal-11-update-observability-ops.md  goal-12-attended-ga.md  goal-13-managed-host.md  goal-14-unattended.md
07-delivery/traceability/: requirements-traceability.csv  requirements-traceability.md
08-operations/: disaster-recovery-plan.md  failure-drill-plan.md  operations-overview.md  slo-alert-catalog.md  tabletop-exercises.md  turn-capacity-model.md
08-operations/runbooks/: abuse-response.md  control-plane-outage.md  database-restore.md  security-incident.md  signing-key-compromise.md  support-bundle-collection.md  turn-capacity-or-ddos.md  update-rollout-incident.md
09-templates/: appsettings.example.json  audit-event-catalog.md  audit-event.example.json  client-config.example.json  coturn.production.example.conf  definition-of-done.md  docker-compose.dev.yml  error-codes.md  policy-document.example.json  security-review-template.md  update-manifest.example.json  update-root.example.json
10-references/: dependency-and-license-policy.md  official-references.md  version-baseline.md
11-bootstrap/: README.md  initialize-repository.ps1  requirements.txt  update-manifest.py  validate-bundle.py
artifacts/: README.md
deploy/client/: README.md  client-config.beta.json
deploy/coturn/: README.md  compose.production-like.yaml  render-and-run.sh  turnserver.conf.template
deploy/network-lab/: goal-07-matrix.md
deploy/observability/: README.md  grafana-dashboard.json  otel-collector.yaml  prometheus-rule-tests.yaml  prometheus-rules.yaml
deploy/signaling/: README.md  nginx.conf.template
docs/: index.html  landing-tweaks.css  landing.css
eng/: bootstrap-dotnet.ps1  bootstrap-webrtc.ps1  capture-goal04-packets.ps1  ensure-python-tools.ps1  generate-cppwinrt.ps1  package-attended.ps1  publish-update.ps1  requirements.in  requirements.lock.txt  run-goal07-network-lab.ps1  sign-artifacts.ps1  test-attended-package.ps1  test-goal04-lifecycle.ps1
src/client/native/: CMakeLists.txt
src/client/native/dependencies/: RemoteSupport.Native.Dependencies.csproj  packages.lock.json
src/client/native/src/: capture.cpp  display.cpp  gpu_color_converter.cpp  input.cpp  input_mapping.hpp  media_foundation_codec.cpp  native_internal.hpp  phased_exports.cpp  renderer.cpp  runtime.cpp  test_flags.hpp  transport.cpp  transport_crypto.cpp  transport_protocol.cpp  transport_protocol.hpp  wgc_capture.cpp
src/client/native/tests/: abi_c_test.c  abi_cpp_test.cpp  capture_benchmark.cpp  codec_benchmark.cpp  codec_capability_probe.cpp  codec_roundtrip_test.cpp  dxgi_capture_test.cpp  hardware_encoder_test.cpp  input_integration_test.cpp  input_mapping_test.cpp  native_runtime_test.cpp  renderer_smoke_test.cpp  transport_integration_test.cpp  wgc_capture_test.cpp
(+228 files in other folders)
